--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,8 +1,6 @@
 <!-- start custom footer snippets -->
 
-<a href="/sitemap/">Sitemap</a>
-
-<!-- Support for MatJax -->
+<!-- Support for MathJax -->
 <script defer src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>
 
